--- a/web/static/css/common.css
+++ b/web/static/css/common.css
@@ -13,16 +13,16 @@ img {
     float: right;
 }
 
-/*.font-16 {*/
-    /*font-size: 16px !important;*/
-/*}*/
+.font-16 {
+    font-size: 16px !important;
+}
 
-/*.clearfix:after {*/
-    /*clear:both;*/
-    /*display: block;*/
-    /*visibility: hidden;*/
-    /*height:0;*/
-/*}*/
+.clearfix:after {
+    clear:both;
+    display: block;
+    visibility: hidden;
+    height:0;
+}
 
 .bg-danger {
     background-color: #d9534f !important;
@@ -34,24 +34,24 @@ img {
     color: #ffffff;
 }
 
-/*.badge {*/                        /* bootstrap.css 也有.badge 的样式 */
-    /*display: inline-block;*/
-    /*min-width: 10px;*/
-    /*padding: 3px 7px;*/
-    /*font-size: 12px;*/
-    /*font-weight: bold;*/
-    /*line-height: 1;*/
-    /*color: #fff;*/
-    /*text-align: center;*/
-    /*white-space: nowrap;*/
-    /*vertical-align: baseline;*/
-    /*background-color: #777;*/
-    /*border-radius: 10px;*/
-/*}*/
+.badge {                         /*bootstrap.css 也有.badge 的样式 */
+    display: inline-block;
+    min-width: 10px;
+    padding: 3px 7px;
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    background-color: #777;
+    border-radius: 10px;
+}
 
-/*.img-circle {*/
-    /*border-radius: 50%;*/
-/*}*/
+.img-circle {
+    border-radius: 50%;
+}
 
 
 
