--- a/web/static/css/layout.css
+++ b/web/static/css/layout.css
@@ -1,42 +1,42 @@
-.pg-body {    /*#导致页面混乱，为什么 ================？*/
+.pg-body { /*#导致页面混乱，为什么 ================？*/
     /*position:relative;*/
 }
-
-
 
 .no-radius {
     border-radius: 0;
 }
 
 .no-margin {
-    margin:0;
+    margin: 0;
 }
 
-.pg-body> .left-menu {
+.pg-body > .left-menu {
     background-color: #fff;
     position: absolute;
-    left:1px;
-    top:48px;
+    left: 1px;
+    top: 48px;
     bottom: 0;
-    width:220px;
+    width: 220px;
     border: 1px solid #EAEDF1;
     overflow: auto;
 }
-.pg-body> .right-body {
+
+.pg-body > .right-body {
     position: absolute;
     left: 225px;
-    right:0;
-    top:48px;
+    right: 0;
+    top: 48px;
     bottom: 0;
     overflow: scroll;
     border: 1px solid #ddd;
     border-top: 0;
     font-size: 13px;
-    min-width:755px;
+    min-width: 755px;
 }
 
 .navbar-right {
-
+    float: right !important;
+    margin-right: -15px;
 }
 
 .luffy-container {
@@ -73,7 +73,6 @@
     color: #2f72ab;
     border-left: 2px solid #2f72ab;
 }
-
 
 .left-menu .menu-body .static-menu a:active {
     color: #2f72ab;
