--- a/web/templates/customer_list.html
+++ b/web/templates/customer_list.html
@@ -32,7 +32,7 @@
                             <i class="fa fa-edit" aria-hidden="true"></i>
                         </a>
                         |
-                        <a style="color:#d9534f" href="/cumtomer/del/{{ row.id }}">
+                        <a style="color:#d9534f" href="/customer/del/{{ row.id }}">
                             <i class="fa fa-trash-o" aria-hidden="true"></i>
                         </a>
                     </td>
