--- a/web/templates/customer_list.html
+++ b/web/templates/customer_list.html
@@ -5,7 +5,7 @@
             <a href="/customer/add" class="btn btn-default">
                 <i class="fa fa-plus-square"></i>  添加客户
             </a>
-            <a href="/cumtomer/import" class="btn btn-default">
+            <a href="/customer/import" class="btn btn-default">
                 <i class="fa fa-file-excel-o"></i>  批量导入
             </a>
         </div>
@@ -28,7 +28,7 @@
                     <td>{{ row.email }}</td>
                     <td>{{ row.company }}</td>
                     <td>
-                        <a style="color:#333" href="/cumtomer/edit/{{ row.id }}">
+                        <a style="color:#333" href="/customer/edit/{{ row.id }}">
                             <i class="fa fa-edit" aria-hidden="true"></i>
                         </a>
                         |
