--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/common.css' %}">
     <link rel="stylesheet" href="{% static 'plugins/font-awesome/css/font-awesome.css' %}">
     <link rel="stylesheet" href="{% static 'css/layout.css' %}">
+    <link rel="stylesheet" href="{% static 'css/import.css' %}">
 
 </head>
 <body>
