customer: import and tmp, import.css, customer_import.html

--- a/web/templates/customer_import.html
+++ b/web/templates/customer_import.html
@@ -1,26 +1,26 @@
 {% extends 'layout.html' %}
 {% block content %}
-    <div class="luffy-container">
-        <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <div class="form-group">
-                <div class="import-relative">
-                    <div class="import-absolute">
-                        <i class="fa fa-cloud-upload" aria-hidden="true"></i>
-                        <span>点击上传execel文件</span>
-                    </div>
-                    <input name="customer_excel" type="file" id="excelFile" class="import-input">
+<div class="luffy-container">
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="form-group">
+            <div class="import-relative">
+                <div class="import-absolute">
+                    <i class="fa fa-cloud-upload"></i>
+                    <span>点击上传excel文件</span>
                 </div>
-                <p>注意: 批量导入的excel需要使用规定的格式模板. <a href="/customer/tpl">下载模板</a></p>
+                <input name="customer_excel" type="file" class="import-input" id="excelFile">
             </div>
-            <button type="submit" class="btn btn-primary">上传</button>
-            {% if status %}
-                <span style="color:green;">{{ msg }}</span>
-            {% else %}
-                <span style="color:red;">{{ msg }}</span>
-            {% endif %}
-        </form>
-    </div>
+            <p class="help-block">注意：批量导入的Excel需使用规定格式模板.<a href="/customer/tpl">下载模板</a></p>
+        </div>
+        <button type="submit" class="btn btn-primary">上传</button>
+    </form>
+    {% if status %}
+        <span style="color: green">{{ msg }}</span>
+    {% else %}
+        <span style="color: red">{{ msg }}</span>
+    {% endif %}
+</div>
 {% endblock content %}
 
 {% block js %}
