--- a/web/static/css/import.css
+++ b/web/static/css/import.css
@@ -1,33 +1,31 @@
-
-.right-body .luffy-container .import-relative {
-    position: relative;
-    display: inline-block;
-    height: 50px;
-    min-width: 300px;
-    overflow: hidden;
+.pg-body .right-body .luffy-container .import-relative {
+    display:inline-block;
+    position:relative;
+    height:50px;
+    min-width:300px;
+    overflow:hidden;
 }
-
-.right-body .luffy-container .import-absolute {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+.pg-body .right-body .luffy-container .import-relative .import-absolute {
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
     z-index: 1000;
-    border: 1px dotted #9d9d9d;
+    border:1px dotted #9d9d9d;
     color: #9d9d9d;
     line-height:50px;
     padding-left:15px;
 }
 
-.right-body .luffy-container .import-input {
-   position:absolute;
+.pg-body .right-body .luffy-container .import-relative .import-input {
+    position:absolute;
     top:0;
     left:0;
     right:0;
     bottom:0;
-    background: #333;
     z-index:1001;
-    opacity:0;
-    filter: alpha(opacity=0);
+    opacity: 0;
+    background-color: #333;
+    filter:alpha(opacity=0);  /* 容IE8及以下的IE浏览器， 而在支持CSS3 opacity 的浏览器中，可以 opacity:0;*/
 }
