--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load rbac %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +12,7 @@
     <link rel="stylesheet" href="{% static 'plugins/font-awesome/css/font-awesome.css' %}">
     <link rel="stylesheet" href="{% static 'css/layout.css' %}">
     <link rel="stylesheet" href="{% static 'css/import.css' %}">
-
+    <link rel="stylesheet" href="{% static 'rbac/css/rbac.css' %}">
 </head>
 <body>
 <div class="pg-header">
@@ -71,14 +72,7 @@
 <div class="pg-body">
     <div class="left-menu">
         <div class="menu-body">         {# 为什么要加这层盒子 #}
-            <div class="static-menu">    {# 为什么要加这层盒子 #}
-                <a href="/customer/list" class="active">
-                    <span><i class="fa "></i></span>客户管理
-                </a>
-                <a href="/payment/list">
-                    <span> <i class="fa "></i></span>账单管理
-                </a>
-            </div>
+            {% multi_menu request %}     {# request 作为参数传给static_menu模板函数 #}
         </div>
 
     </div>
@@ -94,6 +88,7 @@
 </div>
 <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'plugins/bootstrap/js/bootstrap.js' %}"></script>
+<script src="{% static 'rbac/js/rbac.js' %}"></script>
 {% block js %}{% endblock js %}
 </body>
 </html>
