two level menu impl：add comment

--- a/rbac/templates/rbac/multi_menu.html
+++ b/rbac/templates/rbac/multi_menu.html
@@ -1,5 +1,6 @@
+{# 双层for循环显示二级菜单 #}
 <div class="multi-menu">
-    {% for item in menu_dict.values %}
+    {% for item in menu_dict.values %}   {# 是values, 不是value, 包含s #}
         <div class="item">
             <div class="title">
                 <span class="icon-wrap"><i class="fa {{ item.icon }}"></i></span>
