Permission granularity control-2019-9-13

--- a/web/templates/customer_list.html
+++ b/web/templates/customer_list.html
@@ -1,13 +1,21 @@
 {% extends 'layout.html' %}
+{% load rbac %}  {# 加载inclussion_tag中的filter #}
 {% block content %}
     <div class="luffy-container">
         <div class="btn-group">
-            <a href="/customer/add" class="btn btn-default">
-                <i class="fa fa-plus-square"></i>  添加客户
-            </a>
-            <a href="/customer/import" class="btn btn-default">
-                <i class="fa fa-file-excel-o"></i>  批量导入
-            </a>
+            {# has_permission 函数在templatetags\rbac.py中定义 #}
+            {% if request|has_permission:"customer_add" %}
+                {# request 作为has_permission函数的第一个参数， customer_add是该函数第二个参数，这是固定格式 #}
+                {# filter 可以作为if的判断条件 #}
+                <a href="/customer/add" class="btn btn-default">
+                    <i class="fa fa-plus-square"></i> 添加客户
+                </a>
+            {% endif %}
+            {% if request|has_permission:"customer_import" %}
+                <a href="/customer/import" class="btn btn-default">
+                    <i class="fa fa-file-excel-o"></i> 批量导入
+                </a>
+            {% endif %}
         </div>
         <table class="table table-bordered table-responsive">
             <thead>
@@ -17,7 +25,10 @@
                 <td>年龄</td>
                 <td>邮箱</td>
                 <td>公司</td>
-                <td>选项</td>
+                {# 判断用户是否有删除和编辑权限，如果都没有，不显示“选项”这一列 ，若有其中一个权限，则显示"选项"这一列 #}
+                {% if request|has_permission:"customer_del" or request|has_permission:"customer_edit" %}
+                    <td>选项</td>
+                {% endif %}
             </tr>
             </thead>
             {% for row in data_list %}
@@ -27,15 +38,21 @@
                     <td>{{ row.age }}</td>
                     <td>{{ row.email }}</td>
                     <td>{{ row.company }}</td>
-                    <td>
-                        <a style="color:#333" href="/customer/edit/{{ row.id }}">
-                            <i class="fa fa-edit" aria-hidden="true"></i>
-                        </a>
-                        |
-                        <a style="color:#d9534f" href="/customer/del/{{ row.id }}">
-                            <i class="fa fa-trash-o" aria-hidden="true"></i>
-                        </a>
-                    </td>
+                    {% if request|has_permission:"customer_del" or request|has_permission:"customer_edit" %}
+                        <td>
+                            {% if request|has_permission:"customer_edit" %}
+                                <a style="color:#333" href="/customer/edit/{{ row.id }}">
+                                    <i class="fa fa-edit" aria-hidden="true"></i>
+                                </a>
+                            {% endif %}
+                            |
+                            {% if request|has_permission:"customer_del" %}
+                                <a style="color:#d9534f" href="/customer/del/{{ row.id }}">
+                                    <i class="fa fa-trash-o" aria-hidden="true"></i>
+                                </a>
+                            {% endif %}
+                        </td>
+                    {% endif %}
                 </tr>
             {% endfor %}
         </table>
