--- a/web/templates/payment_list.html
+++ b/web/templates/payment_list.html
@@ -1,36 +1,46 @@
 {% extends 'layout.html' %}
+{% load rbac %}  {# 加载inclussion_tag中的filter #}
 {% block content %}
     <div class="luffy-container">
-        <div style="margin: 5px 0;">
-            <a href="/payment/add" class="btn btn-success">
-                <i class="fa fa-plus-square" aria-hidden=true></i> &nbsp添加客户付费记录
-            </a>
-        </div>
-
+        {% if request|has_permission:"payment_add" %}
+            <div style="margin: 5px 0;">
+                <a href="/payment/add" class="btn btn-success">
+                    <i class="fa fa-plus-square" aria-hidden=true></i> &nbsp添加客户付费记录
+                </a>
+            </div>
+        {% endif %}
         <table class="table table-bordered table-hover">
             <thead>
-                <tr>
-                    <td>客户ID</td>
-                    <td>客户名称</td>
-                    <td>付费金额</td>
-                    <td>付费时间</td>
+            <tr>
+                <td>客户ID</td>
+                <td>客户名称</td>
+                <td>付费金额</td>
+                <td>付费时间</td>
+                {% if request|has_permission:"payment_edit" or request|has_permission:"payment_del" %}
                     <td>选项</td>
-                </tr>
+                {% endif %}
+            </tr>
             </thead>
             <tbody>
-                {% for row in data_list %}
-                    <tr>
-                        <td>{{ row.id }}</td>
-                        <td>{{ row.customer }}</td>
-                        <td>{{ row.money }}</td>
-                        <td>{{ row.create_time |date:"Y-m-d H:i:s" }}</td>
+            {% for row in data_list %}
+                <tr>
+                    <td>{{ row.id }}</td>
+                    <td>{{ row.customer }}</td>
+                    <td>{{ row.money }}</td>
+                    <td>{{ row.create_time |date:"Y-m-d H:i:s" }}</td>
+                    {% if request|has_permission:"payment_edit" or request|has_permission:"payment_del" %}
                         <td>
-                            <a style="color:#333;" href="/payment/edit/{{ row.id }}"> <i class="fa fa-edit"></i> </a>
+                            {% if request|has_permission:"payment_edit" %}
+                                <a style="color:#333;" href="/payment/edit/{{ row.id }}"> <i class="fa fa-edit"></i></a>
+                            {% endif %}
                             <span>|</span>
-                            <a style="colro:#d9534f" href="/payment/del/{{ row.id }}"> <i class="fa fa-trash-o"></i></a>
+                            {% if request|has_permission:"payment_del" %}
+                                <a style="colro:#d9534f" href="/payment/del/{{ row.id }}"> <i class="fa fa-trash-o"></i></a>
+                            {% endif %}
                         </td>
-                    </tr>
-                {% endfor %}
+                    {% endif %}
+                </tr>
+            {% endfor %}
             </tbody>
         </table>
     </div>
