role_list and rose_add-2

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -72,12 +72,12 @@
 <div class="pg-body">
     <div class="left-menu">
         <div class="menu-body">         {# 为什么要加这层盒子 #}
-            {% multi_menu request %}     {# request 作为参数传给static_menu模板函数 #}
+{#            {% multi_menu request %}     {# request 作为参数传给static_menu模板函数 #}
         </div>
 
     </div>
     <div class="right-body">
-        {%  breadcrumb request %}       {# 面包屑导航条 #}
+{#        {%  breadcrumb request %}       {# 面包屑导航条 #}
         {% block content %} {% endblock content %}
     </div>
 </div>
