role_list and rose_add-2

--- a/rbac/templates/rbac/role_list.html
+++ b/rbac/templates/rbac/role_list.html
@@ -23,9 +23,15 @@
                     <td>{{ row.id }}</td>
                     <td>{{ row.title }}</td>
                     <td>
-                        <a>编辑</a>
-                        <a>删除</a>
-                    </td>
+                                <a style="color:#333" href="{% url 'rbac:role_edit' pk=row.id %}">
+                                    <i class="fa fa-edit" aria-hidden="true"></i>
+                                </a>
+                            |
+                                <a style="color:#d9534f" href="{% url 'rbac:role_del' pk=row.id %}">
+                                    <i class="fa fa-trash-o" aria-hidden="true"></i>
+                                </a>
+
+                        </td>
                 </tr>
             {% endfor %}
         </table>
