user manage: level one menu

--- a/rbac/templates/rbac/change.html
+++ b/rbac/templates/rbac/change.html
@@ -1,4 +1,25 @@
 {% extends 'layout.html' %}   {# 继承web目录下的layout.html不需要指定目录吗？ #}
+{% block css %}
+    <style>
+        ul {
+            list-style-type: none;
+            padding:0;
+        }
+
+        ul li {
+            float: left;
+            padding: 10px;
+            padding-left:0;
+            width: 80px;
+        }
+
+        ul li i {
+            font-size: 18px;
+            margin-left: 5px;
+            color: #6d6565;
+        }
+    </style>
+{% endblock css %}
 
 {% block content %}
     <div class="luffy-container">
@@ -9,7 +30,7 @@
                     <label class="col-sm-2 control-label">{{ field.label }}</label> {#control-label的文本采用右对齐方式 #}
                     <div class="col-sm-8">
                         {{ field }}
-                        <span style="color:red">{{ field.errors.0 }}</span>
+                        <div><span style="color:red">{{ field.errors.0 }}</span></div>
                     </div>
                 </div>
             {% endfor %}
