--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{% static 'css/layout.css' %}">
     <link rel="stylesheet" href="{% static 'css/import.css' %}">
     <link rel="stylesheet" href="{% static 'rbac/css/rbac.css' %}">
+    {% block css  %}{% endblock css %}
 </head>
 <body>
 <div class="pg-header">
