user manage: level two menu 2019-09-26

--- a/rbac/templates/rbac/menu_list.html
+++ b/rbac/templates/rbac/menu_list.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}   {# 继承web目录下的layout.html不需要指定目录吗？ #}
 {% load rbac %}
 
-{% block css  %}
+{% block css %}
     <style>
-        tr.active {     {# 给表格行中active样式，左边框加粗，黄色，bootstrap的active样式加背景色灰色 #}
-            border-left: 3px solid #fdc00f;
+        tr.active {
+        {# 给表格行中active样式，左边框加粗，黄色，bootstrap的active样式加背景色灰色 #} border-left: 3px solid #fdc00f;
         }
     </style>
 {% endblock css %}
@@ -14,14 +14,14 @@
     <h1>菜单列表</h1>
 
     <div class="luffy-container">
-        <div class="col-md-3">          {# 让这个面板占页面的1/3 #}
+        <div class="col-md-3">          {# 让这个面板占页面的1/4 #}
             <div class="panel panel-default">
                 <!-- Default panel contents -->
                 <div class="panel-heading">
                     <i class="fa fa-book" aria-hidden="true">一级菜单</i>
 
                     <a href="{% memory_url request 'rbac:menu_add' %}" class="right btn btn-success btn-xs"
-                    style="padding: 2px 8px; margin: -3px;">
+                       style="padding: 2px 8px; margin: -3px;">
                         {# 向memory_url 函数传递request参数目的是将URL中的参数传给memory_url函数 #}
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                         新建
@@ -42,19 +42,75 @@
 
                     {% for row in menus %}
                         {# row.id safe 之间不能有空格，否则报错 #}
-                    <tr class="{% if row.id|safe == menu_id  %}active{% endif %}"> {# row.id |safe 表示将数字转换成字符串 #}
-                        <td><a href="?mid={{ row.id }}">{{ row.title }}</a></td>
-                        <td><i class="fa {{ row.icon }}" aria-hidden="true"></i></td>
-                        <td>
+                        <tr class="{% if row.id|safe == menu_id %}active{% endif %}"> {# row.id |safe 表示将数字转换成字符串 #}
+                            <td><a href="?mid={{ row.id }}">{{ row.title }}</a></td>
+                            <td><i class="fa {{ row.icon }}" aria-hidden="true"></i></td>
+                            <td>
                                 <a style="color:#333" href="{% memory_url request 'rbac:menu_edit' pk=row.id %}">
                                     <i class="fa fa-edit" aria-hidden="true"></i>
                                 </a>
-                            |
+                                |
                                 <a style="color:#d9534f" href="{% memory_url request 'rbac:menu_del' pk=row.id %}">
                                     <i class="fa fa-trash-o" aria-hidden="true"></i>
                                 </a>
-                        </td>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="col-md-4">          {# 让这个面板占页面的1/3 #}
+            <div class="panel panel-default">
+                <!-- Default panel contents -->
+                <div class="panel-heading">
+                    <i class="fa fa-gavel" aria-hidden="true">二级菜单</i>
+                    {% if menu_id %}
+                        <a href="{% memory_url request 'rbac:second_menu_add' menu_id=menu_id %}"
+                           class="right btn btn-success btn-xs"
+                           style="padding: 2px 8px; margin: -3px;">
+                            {# 向memory_url 函数传递request参数目的是将URL中的参数传给memory_url函数 #}
+                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                            新建
+                        </a>
+                    {% endif %}
+                </div>
+
+                <!-- Table -->
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>名称</th>
+                        <th>CODE & URL</th>
+                        <th>选项</th>
                     </tr>
+                    </thead>
+                    <tbody>
+
+                    {% for row in second_menus %}
+                        {# row.id safe 之间不能有空格，否则报错 #}
+                        <tr class="{% if row.id|safe == second_menu_id %}active{% endif %}">
+                            {# row.id |safe 表示将数字转换成字符串 #}
+                            <td rowspan="2">      {# 单元格水平合并 #}
+                                <a href="?mid={{ menu_id }}&sid={{ row.id }}">{{ row.title }}</a> {# sid 是权限表的id值 #}
+                            </td>
+                            <td>
+                                {{ row.name }}
+                            </td>
+                            <td>
+                                <a style="color:#333" href="{% memory_url request 'rbac:second_menu_edit' pk=row.id %}">
+                                    <i class="fa fa-edit" aria-hidden="true"></i>
+                                </a>
+                                |
+                                <a style="color:#d9534f" href="{% memory_url request 'rbac:second_menu_del' pk=row.id %}">
+                                    <i class="fa fa-trash-o" aria-hidden="true"></i>
+                                </a>
+                            </td>
+                        </tr>
+                        <tr class="{% if row.id|safe == second_menu_id %}active{% endif %}">  {# 合并单元格后，第二行也要加active #}
+                            <td colspan="2" style="border-top:0">{{ row.url }}</td>
+                            {# colspan="2" 表示一个单元格占两列，单元格水平合并 #}
+                        </tr>
                     {% endfor %}
                     </tbody>
                 </table>
